ops/kubernetes/hello-world-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask
  labels:
    name: flask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
      - name: flask
        image: hello-world-test
        imagePullPolicy: Never
        ports:
        - containerPort: 5010
      restartPolicy: Always
