ops/kubernetes/hello-world-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  selector:
    app: flask
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 5010
