ops/kubernetes/hello-world-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
spec:
  rules:
  - host: hello.world
    http:
      paths:
      - path: /helloworld
        pathType: Prefix
        backend:
          service:
            name: flask-service
            port:
                number: 8080
